configurado welcome-file para a url 'menu'

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,8 @@
   
   <display-name>controles-folha</display-name>
   
+  <welcome-file-list>
+  	<welcome-file>menu</welcome-file>
+  </welcome-file-list>
+  
 </web-app>
